[package]
name = "remote-bash"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.6", features = ["cors"] }
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "ansi"] }
async-stream = "0.3"
futures = "0.3"
tokio-stream = "0.1"
axum-server = { version = "0.8", features = ["tls-rustls"] }
rcgen = "0.13"
sha2 = "0.10"
hex = "0.4"
dirs = "6"
rustls-pemfile = "2"
